@@ -1,4 +1,8 @@
-﻿shmuel 07.03.2016 19:41:34 +0200 - build 563
+﻿shmuel 08.03.2016 23:42:18 +0200 - build 564
+
+1. Рефакторинг.
+
+shmuel 07.03.2016 19:41:34 +0200 - build 563
 
 1. LuaFAR: продолжение M#3175.
    - Убрана функция win.DeleteRegKeyEx.
